Fixed GoogleUser documentation
